# godapp

./: .gitignore  .gitlab-ci.yml  .gitmodules  .python-version  COOKIE_AUTH_IMPLEMENTATION.md  Makefile  README.md  index.html
backend/godapp_main/: Dockerfile  pyproject.toml
backend/godapp_main/base_utils/: JWT_AUTH.md  admin.py  api.py  apps.py  fields.py  models.py  security.py  tests.py  widgets.py
backend/godapp_main/base_utils/management/commands/: decrypt.py  encrypt.py
backend/godapp_main/base_utils/migrations/: 0001_initial.py  0002_alter_systemuser_salt.py  0003_tag_user.py
backend/godapp_main/core/: celery.py  urls.py  wsgi.py
backend/godapp_main/core/settings/: base.py  celery_schedule.py  config.py
backend/godapp_main/notificator/: apps.py  models.py  repository.py  tests.py
backend/godapp_main/notificator/admin/: __init__.py  channel_admin.py  template_admin.py
backend/godapp_main/notificator/channels/: __init__.py  telegram_bot.py
backend/godapp_main/notificator/migrations/: 0001_initial.py  0002_alter_telegramchannel_bot_token.py
backend/godapp_main/todo/: admin.py  apps.py  models.py  repository.py  signals.py  tasks.py  urls.py  views.py
backend/godapp_main/todo/api/: schemas.py  views.py
backend/godapp_main/todo/migrations/: 0001_initial.py  0002_rename_until_todoitem_due_date.py  0003_rename_completed_todoitem_is_completed.py  0004_todoitem_notification_queued.py  0005_alter_todoitem_options_todoitem_column_and_more.py  0006_todoitem_description.py
backend/godapp_main/todo/services/: __init__.py  telegram_bot.py
backend/godapp_main/todo/tests/: test_todo_api.py
backend/godapp_main/vault/: admin.py  models.py  schemas.py  validators.py  views.py
backend/godapp_main/vault/migrations/: 0001_initial.py  0002_vaultentry_user.py
docker-compose/: compose.base.yaml  (+3 more)
(+43 files in other folders)
